Small docker compose changes
